gateway/envoygateway/flagger/envoy_config.json
{
  "configs": [
    {
      "@type": "type.googleapis.com/envoy.admin.v3.BootstrapConfigDump",
      "bootstrap": {
        "node": {
          "userAgentName": "envoy",
          "userAgentBuildVersion": {
            "version": {
              "majorNumber": 1,
              "minorNumber": 26,
              "patch": 1
            },
            "metadata": {
              "build.type": "RELEASE",
              "revision.sha": "c7e8e7356d3a969c1b8e4e1f2687699acd91c6a1",
              "revision.status": "Clean",
              "ssl.version": "BoringSSL"
            }
          },
          "extensions": [
            {
              "name": "envoy.matching.custom_matchers.trie_matcher",
              "category": "envoy.matching.http.custom_matchers",
              "typeUrls": [
                "xds.type.matcher.v3.IPMatcher"
              ]
            },
            {
              "name": "envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
              "category": "envoy.upstream_options",
              "typeUrls": [
                "envoy.extensions.upstreams.http.v3.HttpProtocolOptions"
              ]
            },
            {
              "name": "envoy.extensions.upstreams.tcp.v3.TcpProtocolOptions",
              "category": "envoy.upstream_options",
              "typeUrls": [
                "envoy.extensions.upstreams.tcp.v3.TcpProtocolOptions"
              ]
            },
            {
              "name": "envoy.upstreams.http.http_protocol_options",
              "category": "envoy.upstream_options"
            },
            {
              "name": "envoy.upstreams.tcp.tcp_protocol_options",
              "category": "envoy.upstream_options"
            },
            {
              "name": "envoy.extensions.http.cache.file_system_http_cache",
              "category": "envoy.http.cache",
              "typeUrls": [
                "envoy.extensions.http.cache.file_system_http_cache.v3.FileSystemHttpCacheConfig"
              ]
            },
            {
              "name": "envoy.extensions.http.cache.simple",
              "category": "envoy.http.cache",
              "typeUrls": [
                "envoy.extensions.http.cache.simple_http_cache.v3.SimpleHttpCacheConfig"
              ]
            },
            {
              "name": "envoy.bandwidth_limit",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.buffer",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.cors",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.csrf",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.ext_authz",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.ext_proc",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.fault",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.filters.http.adaptive_concurrency",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.adaptive_concurrency.v3.AdaptiveConcurrency"
              ]
            },
            {
              "name": "envoy.filters.http.admission_control",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.admission_control.v3.AdmissionControl"
              ]
            },
            {
              "name": "envoy.filters.http.alternate_protocols_cache",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.alternate_protocols_cache.v3.FilterConfig"
              ]
            },
            {
              "name": "envoy.filters.http.aws_lambda",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.aws_lambda.v3.Config",
                "envoy.extensions.filters.http.aws_lambda.v3.PerRouteConfig"
              ]
            },
            {
              "name": "envoy.filters.http.aws_request_signing",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigning"
              ]
            },
            {
              "name": "envoy.filters.http.bandwidth_limit",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.bandwidth_limit.v3.BandwidthLimit"
              ]
            },
            {
              "name": "envoy.filters.http.buffer",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.buffer.v3.Buffer",
                "envoy.extensions.filters.http.buffer.v3.BufferPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.cache",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.cache.v3.CacheConfig"
              ]
            },
            {
              "name": "envoy.filters.http.cdn_loop",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.cdn_loop.v3.CdnLoopConfig"
              ]
            },
            {
              "name": "envoy.filters.http.composite",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.composite.v3.Composite"
              ]
            },
            {
              "name": "envoy.filters.http.compressor",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.compressor.v3.Compressor",
                "envoy.extensions.filters.http.compressor.v3.CompressorPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.connect_grpc_bridge",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.connect_grpc_bridge.v3.FilterConfig"
              ]
            },
            {
              "name": "envoy.filters.http.cors",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.cors.v3.Cors",
                "envoy.extensions.filters.http.cors.v3.CorsPolicy"
              ]
            },
            {
              "name": "envoy.filters.http.csrf",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.csrf.v3.CsrfPolicy"
              ]
            },
            {
              "name": "envoy.filters.http.custom_response",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.custom_response.v3.CustomResponse"
              ]
            },
            {
              "name": "envoy.filters.http.decompressor",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.decompressor.v3.Decompressor"
              ]
            },
            {
              "name": "envoy.filters.http.dynamic_forward_proxy",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig",
                "envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig"
              ]
            },
            {
              "name": "envoy.filters.http.ext_authz",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.ext_authz.v3.ExtAuthz",
                "envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.ext_proc",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute",
                "envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor"
              ]
            },
            {
              "name": "envoy.filters.http.fault",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.fault.v3.HTTPFault"
              ]
            },
            {
              "name": "envoy.filters.http.file_system_buffer",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.file_system_buffer.v3.FileSystemBufferFilterConfig"
              ]
            },
            {
              "name": "envoy.filters.http.gcp_authn",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.gcp_authn.v3.GcpAuthnFilterConfig"
              ]
            },
            {
              "name": "envoy.filters.http.grpc_http1_bridge",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.grpc_http1_bridge.v3.Config"
              ]
            },
            {
              "name": "envoy.filters.http.grpc_http1_reverse_bridge",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.grpc_http1_reverse_bridge.v3.FilterConfig",
                "envoy.extensions.filters.http.grpc_http1_reverse_bridge.v3.FilterConfigPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.grpc_json_transcoder",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder"
              ]
            },
            {
              "name": "envoy.filters.http.grpc_stats",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.grpc_stats.v3.FilterConfig"
              ]
            },
            {
              "name": "envoy.filters.http.grpc_web",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.grpc_web.v3.GrpcWeb"
              ]
            },
            {
              "name": "envoy.filters.http.header_mutation",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.header_mutation.v3.HeaderMutation",
                "envoy.extensions.filters.http.header_mutation.v3.HeaderMutationPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.header_to_metadata",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.header_to_metadata.v3.Config"
              ]
            },
            {
              "name": "envoy.filters.http.health_check",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.health_check.v3.HealthCheck"
              ]
            },
            {
              "name": "envoy.filters.http.ip_tagging",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.ip_tagging.v3.IPTagging"
              ]
            },
            {
              "name": "envoy.filters.http.jwt_authn",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication",
                "envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig"
              ]
            },
            {
              "name": "envoy.filters.http.local_ratelimit",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit"
              ]
            },
            {
              "name": "envoy.filters.http.lua",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.lua.v3.Lua",
                "envoy.extensions.filters.http.lua.v3.LuaPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.match_delegate",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.common.matching.v3.ExtensionWithMatcher"
              ]
            },
            {
              "name": "envoy.filters.http.oauth2",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.oauth2.v3.OAuth2"
              ]
            },
            {
              "name": "envoy.filters.http.on_demand",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.on_demand.v3.OnDemand",
                "envoy.extensions.filters.http.on_demand.v3.PerRouteConfig"
              ]
            },
            {
              "name": "envoy.filters.http.original_src",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.original_src.v3.OriginalSrc"
              ]
            },
            {
              "name": "envoy.filters.http.rate_limit_quota",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.rate_limit_quota.v3.RateLimitQuotaFilterConfig",
                "envoy.extensions.filters.http.rate_limit_quota.v3.RateLimitQuotaOverride"
              ]
            },
            {
              "name": "envoy.filters.http.ratelimit",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.ratelimit.v3.RateLimit",
                "envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.rbac",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.rbac.v3.RBAC",
                "envoy.extensions.filters.http.rbac.v3.RBACPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.router",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.router.v3.Router"
              ]
            },
            {
              "name": "envoy.filters.http.set_metadata",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.set_metadata.v3.Config"
              ]
            },
            {
              "name": "envoy.filters.http.stateful_session",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.stateful_session.v3.StatefulSession",
                "envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.tap",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.tap.v3.Tap"
              ]
            },
            {
              "name": "envoy.filters.http.wasm",
              "category": "envoy.filters.http",
              "typeUrls": [
                "envoy.extensions.filters.http.wasm.v3.Wasm"
              ]
            },
            {
              "name": "envoy.grpc_http1_bridge",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.grpc_json_transcoder",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.grpc_web",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.health_check",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.ip_tagging",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.local_rate_limit",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.lua",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.rate_limit",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.router",
              "category": "envoy.filters.http"
            },
            {
              "name": "envoy.http.early_header_mutation.header_mutation",
              "category": "envoy.http.early_header_mutation",
              "typeUrls": [
                "envoy.extensions.http.early_header_mutation.header_mutation.v3.HeaderMutation"
              ]
            },
            {
              "name": "envoy.echo",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.ext_authz",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.filters.network.connection_limit",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.connection_limit.v3.ConnectionLimit"
              ]
            },
            {
              "name": "envoy.filters.network.direct_response",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.direct_response.v3.Config"
              ]
            },
            {
              "name": "envoy.filters.network.dubbo_proxy",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.dubbo_proxy.v3.DubboProxy"
              ]
            },
            {
              "name": "envoy.filters.network.echo",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.echo.v3.Echo"
              ]
            },
            {
              "name": "envoy.filters.network.ext_authz",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.ext_authz.v3.ExtAuthz"
              ]
            },
            {
              "name": "envoy.filters.network.http_connection_manager",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
              ]
            },
            {
              "name": "envoy.filters.network.local_ratelimit",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.local_ratelimit.v3.LocalRateLimit"
              ]
            },
            {
              "name": "envoy.filters.network.mongo_proxy",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.mongo_proxy.v3.MongoProxy"
              ]
            },
            {
              "name": "envoy.filters.network.ratelimit",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.ratelimit.v3.RateLimit"
              ]
            },
            {
              "name": "envoy.filters.network.rbac",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.rbac.v3.RBAC"
              ]
            },
            {
              "name": "envoy.filters.network.redis_proxy",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.redis_proxy.v3.RedisProxy"
              ]
            },
            {
              "name": "envoy.filters.network.sni_cluster",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.sni_cluster.v3.SniCluster"
              ]
            },
            {
              "name": "envoy.filters.network.sni_dynamic_forward_proxy",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.sni_dynamic_forward_proxy.v3.FilterConfig"
              ]
            },
            {
              "name": "envoy.filters.network.tcp_proxy",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy"
              ]
            },
            {
              "name": "envoy.filters.network.thrift_proxy",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.thrift_proxy.v3.ThriftProxy"
              ]
            },
            {
              "name": "envoy.filters.network.wasm",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.wasm.v3.Wasm"
              ]
            },
            {
              "name": "envoy.filters.network.zookeeper_proxy",
              "category": "envoy.filters.network",
              "typeUrls": [
                "envoy.extensions.filters.network.zookeeper_proxy.v3.ZooKeeperProxy"
              ]
            },
            {
              "name": "envoy.http_connection_manager",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.mongo_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.ratelimit",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.redis_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.tcp_proxy",
              "category": "envoy.filters.network"
            },
            {
              "name": "envoy.transport_sockets.alts",
              "category": "envoy.transport_sockets.upstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.alts.v3.Alts"
              ]
            },
            {
              "name": "envoy.transport_sockets.http_11_proxy",
              "category": "envoy.transport_sockets.upstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.http_11_proxy.v3.Http11ProxyUpstreamTransport"
              ]
            },
            {
              "name": "envoy.transport_sockets.internal_upstream",
              "category": "envoy.transport_sockets.upstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.internal_upstream.v3.InternalUpstreamTransport"
              ]
            },
            {
              "name": "envoy.transport_sockets.quic",
              "category": "envoy.transport_sockets.upstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.quic.v3.QuicUpstreamTransport"
              ]
            },
            {
              "name": "envoy.transport_sockets.raw_buffer",
              "category": "envoy.transport_sockets.upstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
              ]
            },
            {
              "name": "envoy.transport_sockets.starttls",
              "category": "envoy.transport_sockets.upstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.starttls.v3.UpstreamStartTlsConfig"
              ]
            },
            {
              "name": "envoy.transport_sockets.tap",
              "category": "envoy.transport_sockets.upstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.tap.v3.Tap"
              ]
            },
            {
              "name": "envoy.transport_sockets.tcp_stats",
              "category": "envoy.transport_sockets.upstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.tcp_stats.v3.Config"
              ]
            },
            {
              "name": "envoy.transport_sockets.tls",
              "category": "envoy.transport_sockets.upstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext"
              ]
            },
            {
              "name": "envoy.transport_sockets.upstream_proxy_protocol",
              "category": "envoy.transport_sockets.upstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.proxy_protocol.v3.ProxyProtocolUpstreamTransport"
              ]
            },
            {
              "name": "raw_buffer",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "starttls",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "tls",
              "category": "envoy.transport_sockets.upstream"
            },
            {
              "name": "envoy.http.stateful_session.cookie",
              "category": "envoy.http.stateful_session",
              "typeUrls": [
                "envoy.extensions.http.stateful_session.cookie.v3.CookieBasedSessionState"
              ]
            },
            {
              "name": "envoy.http.stateful_session.header",
              "category": "envoy.http.stateful_session",
              "typeUrls": [
                "envoy.extensions.http.stateful_session.header.v3.HeaderBasedSessionState"
              ]
            },
            {
              "name": "envoy.dynamic.ot",
              "category": "envoy.tracers"
            },
            {
              "name": "envoy.tracers.datadog",
              "category": "envoy.tracers",
              "typeUrls": [
                "envoy.config.trace.v3.DatadogConfig"
              ]
            },
            {
              "name": "envoy.tracers.dynamic_ot",
              "category": "envoy.tracers",
              "typeUrls": [
                "envoy.config.trace.v3.DynamicOtConfig"
              ]
            },
            {
              "name": "envoy.tracers.opencensus",
              "category": "envoy.tracers",
              "typeUrls": [
                "envoy.config.trace.v3.OpenCensusConfig"
              ]
            },
            {
              "name": "envoy.tracers.opentelemetry",
              "category": "envoy.tracers",
              "typeUrls": [
                "envoy.config.trace.v3.OpenTelemetryConfig"
              ]
            },
            {
              "name": "envoy.tracers.skywalking",
              "category": "envoy.tracers",
              "typeUrls": [
                "envoy.config.trace.v3.SkyWalkingConfig"
              ]
            },
            {
              "name": "envoy.tracers.xray",
              "category": "envoy.tracers",
              "typeUrls": [
                "envoy.config.trace.v3.XRayConfig"
              ]
            },
            {
              "name": "envoy.tracers.zipkin",
              "category": "envoy.tracers",
              "typeUrls": [
                "envoy.config.trace.v3.ZipkinConfig"
              ]
            },
            {
              "name": "envoy.zipkin",
              "category": "envoy.tracers"
            },
            {
              "name": "envoy.path.match.uri_template.uri_template_matcher",
              "category": "envoy.path.match",
              "typeUrls": [
                "envoy.extensions.path.match.uri_template.v3.UriTemplateMatchConfig"
              ]
            },
            {
              "name": "envoy.rate_limit_descriptors.expr",
              "category": "envoy.rate_limit_descriptors",
              "typeUrls": [
                "envoy.extensions.rate_limit_descriptors.expr.v3.Descriptor"
              ]
            },
            {
              "name": "envoy.quic.deterministic_connection_id_generator",
              "category": "envoy.quic.connection_id_generator",
              "typeUrls": [
                "envoy.extensions.quic.connection_id_generator.v3.DeterministicConnectionIdGeneratorConfig"
              ]
            },
            {
              "name": "quic.http_server_connection.default",
              "category": "quic.http_server_connection"
            },
            {
              "name": "envoy.internal_redirect_predicates.allow_listed_routes",
              "category": "envoy.internal_redirect_predicates",
              "typeUrls": [
                "envoy.extensions.internal_redirect.allow_listed_routes.v3.AllowListedRoutesConfig"
              ]
            },
            {
              "name": "envoy.internal_redirect_predicates.previous_routes",
              "category": "envoy.internal_redirect_predicates",
              "typeUrls": [
                "envoy.extensions.internal_redirect.previous_routes.v3.PreviousRoutesConfig"
              ]
            },
            {
              "name": "envoy.internal_redirect_predicates.safe_cross_scheme",
              "category": "envoy.internal_redirect_predicates",
              "typeUrls": [
                "envoy.extensions.internal_redirect.safe_cross_scheme.v3.SafeCrossSchemeConfig"
              ]
            },
            {
              "name": "quic.server_preferred_address.fixed",
              "category": "envoy.quic.server_preferred_address",
              "typeUrls": [
                "envoy.extensions.quic.server_preferred_address.v3.FixedServerPreferredAddressConfig"
              ]
            },
            {
              "name": "envoy.filters.dubbo.router",
              "category": "envoy.dubbo_proxy.filters",
              "typeUrls": [
                "envoy.extensions.filters.network.dubbo_proxy.router.v3.Router"
              ]
            },
            {
              "name": "envoy.resource_monitors.fixed_heap",
              "category": "envoy.resource_monitors",
              "typeUrls": [
                "envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig"
              ]
            },
            {
              "name": "envoy.resource_monitors.injected_resource",
              "category": "envoy.resource_monitors",
              "typeUrls": [
                "envoy.extensions.resource_monitors.injected_resource.v3.InjectedResourceConfig"
              ]
            },
            {
              "name": "envoy.config.validators.minimum_clusters",
              "category": "envoy.config.validators"
            },
            {
              "name": "envoy.config.validators.minimum_clusters_validator",
              "category": "envoy.config.validators",
              "typeUrls": [
                "envoy.extensions.config.validators.minimum_clusters.v3.MinimumClustersValidator"
              ]
            },
            {
              "name": "envoy.key_value.file_based",
              "category": "envoy.common.key_value",
              "typeUrls": [
                "envoy.extensions.key_value.file_based.v3.FileBasedKeyValueStoreConfig"
              ]
            },
            {
              "name": "envoy.rbac.matchers.upstream_ip_port",
              "category": "envoy.rbac.matchers",
              "typeUrls": [
                "envoy.extensions.rbac.matchers.upstream_ip_port.v3.UpstreamIpPortMatcher"
              ]
            },
            {
              "name": "envoy.filters.thrift.header_to_metadata",
              "category": "envoy.thrift_proxy.filters",
              "typeUrls": [
                "envoy.extensions.filters.network.thrift_proxy.filters.header_to_metadata.v3.HeaderToMetadata"
              ]
            },
            {
              "name": "envoy.filters.thrift.payload_to_metadata",
              "category": "envoy.thrift_proxy.filters",
              "typeUrls": [
                "envoy.extensions.filters.network.thrift_proxy.filters.payload_to_metadata.v3.PayloadToMetadata"
              ]
            },
            {
              "name": "envoy.filters.thrift.rate_limit",
              "category": "envoy.thrift_proxy.filters",
              "typeUrls": [
                "envoy.extensions.filters.network.thrift_proxy.filters.ratelimit.v3.RateLimit"
              ]
            },
            {
              "name": "envoy.filters.thrift.router",
              "category": "envoy.thrift_proxy.filters",
              "typeUrls": [
                "envoy.extensions.filters.network.thrift_proxy.router.v3.Router"
              ]
            },
            {
              "name": "envoy.access_loggers.file",
              "category": "envoy.access_loggers",
              "typeUrls": [
                "envoy.extensions.access_loggers.file.v3.FileAccessLog"
              ]
            },
            {
              "name": "envoy.access_loggers.http_grpc",
              "category": "envoy.access_loggers",
              "typeUrls": [
                "envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig"
              ]
            },
            {
              "name": "envoy.access_loggers.open_telemetry",
              "category": "envoy.access_loggers",
              "typeUrls": [
                "envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig"
              ]
            },
            {
              "name": "envoy.access_loggers.stderr",
              "category": "envoy.access_loggers",
              "typeUrls": [
                "envoy.extensions.access_loggers.stream.v3.StderrAccessLog"
              ]
            },
            {
              "name": "envoy.access_loggers.stdout",
              "category": "envoy.access_loggers",
              "typeUrls": [
                "envoy.extensions.access_loggers.stream.v3.StdoutAccessLog"
              ]
            },
            {
              "name": "envoy.access_loggers.tcp_grpc",
              "category": "envoy.access_loggers",
              "typeUrls": [
                "envoy.extensions.access_loggers.grpc.v3.TcpGrpcAccessLogConfig"
              ]
            },
            {
              "name": "envoy.access_loggers.wasm",
              "category": "envoy.access_loggers",
              "typeUrls": [
                "envoy.extensions.access_loggers.wasm.v3.WasmAccessLog"
              ]
            },
            {
              "name": "envoy.file_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.http_grpc_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.open_telemetry_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.stderr_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.stdout_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.tcp_grpc_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.wasm_access_log",
              "category": "envoy.access_loggers"
            },
            {
              "name": "envoy.transport_sockets.alts",
              "category": "envoy.transport_sockets.downstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.alts.v3.Alts"
              ]
            },
            {
              "name": "envoy.transport_sockets.quic",
              "category": "envoy.transport_sockets.downstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport"
              ]
            },
            {
              "name": "envoy.transport_sockets.raw_buffer",
              "category": "envoy.transport_sockets.downstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
              ]
            },
            {
              "name": "envoy.transport_sockets.starttls",
              "category": "envoy.transport_sockets.downstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.starttls.v3.StartTlsConfig"
              ]
            },
            {
              "name": "envoy.transport_sockets.tap",
              "category": "envoy.transport_sockets.downstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.tap.v3.Tap"
              ]
            },
            {
              "name": "envoy.transport_sockets.tcp_stats",
              "category": "envoy.transport_sockets.downstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.tcp_stats.v3.Config"
              ]
            },
            {
              "name": "envoy.transport_sockets.tls",
              "category": "envoy.transport_sockets.downstream",
              "typeUrls": [
                "envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext"
              ]
            },
            {
              "name": "raw_buffer",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "starttls",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "tls",
              "category": "envoy.transport_sockets.downstream"
            },
            {
              "name": "envoy.filters.connection_pools.tcp.generic",
              "category": "envoy.upstreams",
              "typeUrls": [
                "envoy.extensions.upstreams.tcp.generic.v3.GenericConnectionPoolProto"
              ]
            },
            {
              "name": "envoy.watchdog.abort_action",
              "category": "envoy.guarddog_actions",
              "typeUrls": [
                "envoy.watchdog.v3.AbortActionConfig"
              ]
            },
            {
              "name": "envoy.watchdog.profile_action",
              "category": "envoy.guarddog_actions",
              "typeUrls": [
                "envoy.extensions.watchdog.profile_action.v3.ProfileActionConfig"
              ]
            },
            {
              "name": "envoy.network.dns_resolver.cares",
              "category": "envoy.network.dns_resolver",
              "typeUrls": [
                "envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig"
              ]
            },
            {
              "name": "envoy.network.dns_resolver.getaddrinfo",
              "category": "envoy.network.dns_resolver",
              "typeUrls": [
                "envoy.extensions.network.dns_resolver.getaddrinfo.v3.GetAddrInfoDnsResolverConfig"
              ]
            },
            {
              "name": "envoy.tls.cert_validator.default",
              "category": "envoy.tls.cert_validator"
            },
            {
              "name": "envoy.tls.cert_validator.spiffe",
              "category": "envoy.tls.cert_validator"
            },
            {
              "name": "envoy.matching.inputs.destination_ip",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.destination_port",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.direct_source_ip",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.DirectSourceIPInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.dns_san",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.ssl.v3.DnsSanInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.request_headers",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.type.matcher.v3.HttpRequestHeaderMatchInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.request_trailers",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.type.matcher.v3.HttpRequestTrailerMatchInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.response_headers",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.type.matcher.v3.HttpResponseHeaderMatchInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.response_trailers",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.type.matcher.v3.HttpResponseTrailerMatchInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.server_name",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.ServerNameInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.source_ip",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.SourceIPInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.source_port",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.SourcePortInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.source_type",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.SourceTypeInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.status_code_class_input",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.type.matcher.v3.HttpResponseStatusCodeClassMatchInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.status_code_input",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.type.matcher.v3.HttpResponseStatusCodeMatchInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.subject",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.ssl.v3.SubjectInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.uri_san",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput"
              ]
            },
            {
              "name": "query_params",
              "category": "envoy.matching.http.input",
              "typeUrls": [
                "envoy.type.matcher.v3.HttpRequestQueryParamMatchInput"
              ]
            },
            {
              "name": "auto",
              "category": "envoy.thrift_proxy.transports"
            },
            {
              "name": "framed",
              "category": "envoy.thrift_proxy.transports"
            },
            {
              "name": "header",
              "category": "envoy.thrift_proxy.transports"
            },
            {
              "name": "unframed",
              "category": "envoy.thrift_proxy.transports"
            },
            {
              "name": "envoy.quic.crypto_stream.server.quiche",
              "category": "envoy.quic.server.crypto_stream",
              "typeUrls": [
                "envoy.extensions.quic.crypto_stream.v3.CryptoServerStreamConfig"
              ]
            },
            {
              "name": "envoy.matching.actions.format_string",
              "category": "envoy.matching.action",
              "typeUrls": [
                "envoy.config.core.v3.SubstitutionFormatString"
              ]
            },
            {
              "name": "filter-chain-name",
              "category": "envoy.matching.action",
              "typeUrls": [
                "google.protobuf.StringValue"
              ]
            },
            {
              "name": "envoy.formatter.metadata",
              "category": "envoy.formatter",
              "typeUrls": [
                "envoy.extensions.formatter.metadata.v3.Metadata"
              ]
            },
            {
              "name": "envoy.formatter.req_without_query",
              "category": "envoy.formatter",
              "typeUrls": [
                "envoy.extensions.formatter.req_without_query.v3.ReqWithoutQuery"
              ]
            },
            {
              "name": "envoy.listener_manager_impl.default",
              "category": "envoy.listener_manager_impl",
              "typeUrls": [
                "envoy.config.listener.v3.ListenerManager"
              ]
            },
            {
              "name": "envoy.listener_manager_impl.validation",
              "category": "envoy.listener_manager_impl",
              "typeUrls": [
                "envoy.config.listener.v3.ValidationListenerManager"
              ]
            },
            {
              "name": "envoy.matching.custom_matchers.trie_matcher",
              "category": "envoy.matching.network.custom_matchers",
              "typeUrls": [
                "xds.type.matcher.v3.IPMatcher"
              ]
            },
            {
              "name": "envoy.access_loggers.extension_filters.cel",
              "category": "envoy.access_loggers.extension_filters",
              "typeUrls": [
                "envoy.extensions.access_loggers.filters.cel.v3.ExpressionFilter"
              ]
            },
            {
              "name": "envoy.retry_host_predicates.omit_canary_hosts",
              "category": "envoy.retry_host_predicates",
              "typeUrls": [
                "envoy.extensions.retry.host.omit_canary_hosts.v3.OmitCanaryHostsPredicate"
              ]
            },
            {
              "name": "envoy.retry_host_predicates.omit_host_metadata",
              "category": "envoy.retry_host_predicates",
              "typeUrls": [
                "envoy.extensions.retry.host.omit_host_metadata.v3.OmitHostMetadataConfig"
              ]
            },
            {
              "name": "envoy.retry_host_predicates.previous_hosts",
              "category": "envoy.retry_host_predicates",
              "typeUrls": [
                "envoy.extensions.retry.host.previous_hosts.v3.PreviousHostsPredicate"
              ]
            },
            {
              "name": "envoy.path.rewrite.uri_template.uri_template_rewriter",
              "category": "envoy.path.rewrite",
              "typeUrls": [
                "envoy.extensions.path.rewrite.uri_template.v3.UriTemplateRewriteConfig"
              ]
            },
            {
              "name": "default",
              "category": "network.connection.client"
            },
            {
              "name": "envoy_internal",
              "category": "network.connection.client"
            },
            {
              "name": "envoy.regex_engines.google_re2",
              "category": "envoy.regex_engines",
              "typeUrls": [
                "envoy.extensions.regex_engines.v3.GoogleRE2"
              ]
            },
            {
              "name": "envoy.http.stateful_header_formatters.preserve_case",
              "category": "envoy.http.stateful_header_formatters",
              "typeUrls": [
                "envoy.extensions.http.header_formatters.preserve_case.v3.PreserveCaseFormatterConfig"
              ]
            },
            {
              "name": "preserve_case",
              "category": "envoy.http.stateful_header_formatters"
            },
            {
              "name": "envoy.matching.inputs.application_protocol",
              "category": "envoy.matching.network.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.ApplicationProtocolInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.destination_ip",
              "category": "envoy.matching.network.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.destination_port",
              "category": "envoy.matching.network.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.direct_source_ip",
              "category": "envoy.matching.network.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.DirectSourceIPInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.dns_san",
              "category": "envoy.matching.network.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.ssl.v3.DnsSanInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.filter_state",
              "category": "envoy.matching.network.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.FilterStateInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.server_name",
              "category": "envoy.matching.network.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.ServerNameInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.source_ip",
              "category": "envoy.matching.network.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.SourceIPInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.source_port",
              "category": "envoy.matching.network.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.SourcePortInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.source_type",
              "category": "envoy.matching.network.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.SourceTypeInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.subject",
              "category": "envoy.matching.network.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.ssl.v3.SubjectInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.transport_protocol",
              "category": "envoy.matching.network.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.network.v3.TransportProtocolInput"
              ]
            },
            {
              "name": "envoy.matching.inputs.uri_san",
              "category": "envoy.matching.network.input",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.ssl.v3.UriSanInput"
              ]
            },
            {
              "name": "envoy.dog_statsd",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.graphite_statsd",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.metrics_service",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.stat_sinks.dog_statsd",
              "category": "envoy.stats_sinks",
              "typeUrls": [
                "envoy.config.metrics.v3.DogStatsdSink"
              ]
            },
            {
              "name": "envoy.stat_sinks.graphite_statsd",
              "category": "envoy.stats_sinks",
              "typeUrls": [
                "envoy.extensions.stat_sinks.graphite_statsd.v3.GraphiteStatsdSink"
              ]
            },
            {
              "name": "envoy.stat_sinks.hystrix",
              "category": "envoy.stats_sinks",
              "typeUrls": [
                "envoy.config.metrics.v3.HystrixSink"
              ]
            },
            {
              "name": "envoy.stat_sinks.metrics_service",
              "category": "envoy.stats_sinks",
              "typeUrls": [
                "envoy.config.metrics.v3.MetricsServiceConfig"
              ]
            },
            {
              "name": "envoy.stat_sinks.statsd",
              "category": "envoy.stats_sinks",
              "typeUrls": [
                "envoy.config.metrics.v3.StatsdSink"
              ]
            },
            {
              "name": "envoy.stat_sinks.wasm",
              "category": "envoy.stats_sinks",
              "typeUrls": [
                "envoy.extensions.stat_sinks.wasm.v3.Wasm"
              ]
            },
            {
              "name": "envoy.statsd",
              "category": "envoy.stats_sinks"
            },
            {
              "name": "envoy.cluster.eds",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.cluster.logical_dns",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.cluster.original_dst",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.cluster.static",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.cluster.strict_dns",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.clusters.aggregate",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.clusters.dynamic_forward_proxy",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.clusters.redis",
              "category": "envoy.clusters"
            },
            {
              "name": "envoy.load_balancing_policies.least_request",
              "category": "envoy.load_balancing_policies",
              "typeUrls": [
                "envoy.extensions.load_balancing_policies.least_request.v3.LeastRequest"
              ]
            },
            {
              "name": "envoy.load_balancing_policies.maglev",
              "category": "envoy.load_balancing_policies",
              "typeUrls": [
                "envoy.extensions.load_balancing_policies.maglev.v3.Maglev"
              ]
            },
            {
              "name": "envoy.load_balancing_policies.random",
              "category": "envoy.load_balancing_policies",
              "typeUrls": [
                "envoy.extensions.load_balancing_policies.random.v3.Random"
              ]
            },
            {
              "name": "envoy.load_balancing_policies.ring_hash",
              "category": "envoy.load_balancing_policies",
              "typeUrls": [
                "envoy.extensions.load_balancing_policies.ring_hash.v3.RingHash"
              ]
            },
            {
              "name": "envoy.load_balancing_policies.round_robin",
              "category": "envoy.load_balancing_policies",
              "typeUrls": [
                "envoy.extensions.load_balancing_policies.round_robin.v3.RoundRobin"
              ]
            },
            {
              "name": "envoy.udp_packet_writer.default",
              "category": "envoy.udp_packet_writer",
              "typeUrls": [
                "envoy.extensions.udp_packet_writer.v3.UdpDefaultWriterFactory"
              ]
            },
            {
              "name": "envoy.udp_packet_writer.gso",
              "category": "envoy.udp_packet_writer",
              "typeUrls": [
                "envoy.extensions.udp_packet_writer.v3.UdpGsoBatchWriterFactory"
              ]
            },
            {
              "name": "envoy.route.early_data_policy.default",
              "category": "envoy.route.early_data_policy",
              "typeUrls": [
                "envoy.extensions.early_data.v3.DefaultEarlyDataPolicy"
              ]
            },
            {
              "name": "envoy.buffer",
              "category": "envoy.filters.http.upstream"
            },
            {
              "name": "envoy.filters.http.admission_control",
              "category": "envoy.filters.http.upstream",
              "typeUrls": [
                "envoy.extensions.filters.http.admission_control.v3.AdmissionControl"
              ]
            },
            {
              "name": "envoy.filters.http.buffer",
              "category": "envoy.filters.http.upstream",
              "typeUrls": [
                "envoy.extensions.filters.http.buffer.v3.Buffer",
                "envoy.extensions.filters.http.buffer.v3.BufferPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.header_mutation",
              "category": "envoy.filters.http.upstream",
              "typeUrls": [
                "envoy.extensions.filters.http.header_mutation.v3.HeaderMutation",
                "envoy.extensions.filters.http.header_mutation.v3.HeaderMutationPerRoute"
              ]
            },
            {
              "name": "envoy.filters.http.upstream_codec",
              "category": "envoy.filters.http.upstream",
              "typeUrls": [
                "envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec"
              ]
            },
            {
              "name": "envoy.config_subscription.filesystem",
              "category": "envoy.config_subscription",
              "typeUrls": [
                "envoy.config.core.v3.FilesystemSubscription"
              ]
            },
            {
              "name": "envoy.config_subscription.filesystem_collection",
              "category": "envoy.config_subscription",
              "typeUrls": [
                "envoy.config.core.v3.FilesystemCollectionSubscription"
              ]
            },
            {
              "name": "envoy.config_subscription.rest",
              "category": "envoy.config_subscription",
              "typeUrls": [
                "envoy.config.core.v3.RestSubscription"
              ]
            },
            {
              "name": "envoy.request_id.uuid",
              "category": "envoy.request_id",
              "typeUrls": [
                "envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig"
              ]
            },
            {
              "name": "envoy.extensions.http.custom_response.local_response_policy",
              "category": "envoy.http.custom_response",
              "typeUrls": [
                "envoy.extensions.http.custom_response.local_response_policy.v3.LocalResponsePolicy"
              ]
            },
            {
              "name": "envoy.extensions.http.custom_response.redirect_policy",
              "category": "envoy.http.custom_response",
              "typeUrls": [
                "envoy.extensions.http.custom_response.redirect_policy.v3.RedirectPolicy"
              ]
            },
            {
              "name": "envoy.connection_handler.default",
              "category": "envoy.connection_handler"
            },
            {
              "name": "envoy.retry_priorities.previous_priorities",
              "category": "envoy.retry_priorities",
              "typeUrls": [
                "envoy.extensions.retry.priority.previous_priorities.v3.PreviousPrioritiesConfig"
              ]
            },
            {
              "name": "envoy.compression.brotli.compressor",
              "category": "envoy.compression.compressor",
              "typeUrls": [
                "envoy.extensions.compression.brotli.compressor.v3.Brotli"
              ]
            },
            {
              "name": "envoy.compression.gzip.compressor",
              "category": "envoy.compression.compressor",
              "typeUrls": [
                "envoy.extensions.compression.gzip.compressor.v3.Gzip"
              ]
            },
            {
              "name": "envoy.compression.zstd.compressor",
              "category": "envoy.compression.compressor",
              "typeUrls": [
                "envoy.extensions.compression.zstd.compressor.v3.Zstd"
              ]
            },
            {
              "name": "envoy.grpc_credentials.aws_iam",
              "category": "envoy.grpc_credentials"
            },
            {
              "name": "envoy.grpc_credentials.default",
              "category": "envoy.grpc_credentials"
            },
            {
              "name": "envoy.grpc_credentials.file_based_metadata",
              "category": "envoy.grpc_credentials"
            },
            {
              "name": "dubbo.hessian2",
              "category": "envoy.dubbo_proxy.serializers"
            },
            {
              "name": "envoy.health_checkers.grpc",
              "category": "envoy.health_checkers",
              "typeUrls": [
                "envoy.config.core.v3.HealthCheck.GrpcHealthCheck"
              ]
            },
            {
              "name": "envoy.health_checkers.http",
              "category": "envoy.health_checkers",
              "typeUrls": [
                "envoy.config.core.v3.HealthCheck.HttpHealthCheck"
              ]
            },
            {
              "name": "envoy.health_checkers.redis",
              "category": "envoy.health_checkers",
              "typeUrls": [
                "envoy.extensions.health_checkers.redis.v3.Redis"
              ]
            },
            {
              "name": "envoy.health_checkers.tcp",
              "category": "envoy.health_checkers",
              "typeUrls": [
                "envoy.config.core.v3.HealthCheck.TcpHealthCheck"
              ]
            },
            {
              "name": "envoy.health_checkers.thrift",
              "category": "envoy.health_checkers",
              "typeUrls": [
                "envoy.extensions.health_checkers.thrift.v3.Thrift"
              ]
            },
            {
              "name": "envoy.filters.listener.http_inspector",
              "category": "envoy.filters.listener",
              "typeUrls": [
                "envoy.extensions.filters.listener.http_inspector.v3.HttpInspector"
              ]
            },
            {
              "name": "envoy.filters.listener.local_ratelimit",
              "category": "envoy.filters.listener",
              "typeUrls": [
                "envoy.extensions.filters.listener.local_ratelimit.v3.LocalRateLimit"
              ]
            },
            {
              "name": "envoy.filters.listener.original_dst",
              "category": "envoy.filters.listener",
              "typeUrls": [
                "envoy.extensions.filters.listener.original_dst.v3.OriginalDst"
              ]
            },
            {
              "name": "envoy.filters.listener.original_src",
              "category": "envoy.filters.listener",
              "typeUrls": [
                "envoy.extensions.filters.listener.original_src.v3.OriginalSrc"
              ]
            },
            {
              "name": "envoy.filters.listener.proxy_protocol",
              "category": "envoy.filters.listener",
              "typeUrls": [
                "envoy.extensions.filters.listener.proxy_protocol.v3.ProxyProtocol"
              ]
            },
            {
              "name": "envoy.filters.listener.tls_inspector",
              "category": "envoy.filters.listener",
              "typeUrls": [
                "envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector"
              ]
            },
            {
              "name": "envoy.listener.http_inspector",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.listener.original_dst",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.listener.original_src",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.listener.proxy_protocol",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.listener.tls_inspector",
              "category": "envoy.filters.listener"
            },
            {
              "name": "envoy.matching.common_inputs.environment_variable",
              "category": "envoy.matching.common_inputs",
              "typeUrls": [
                "envoy.extensions.matching.common_inputs.environment_variable.v3.Config"
              ]
            },
            {
              "name": "envoy.wasm.runtime.null",
              "category": "envoy.wasm.runtime"
            },
            {
              "name": "envoy.wasm.runtime.v8",
              "category": "envoy.wasm.runtime"
            },
            {
              "name": "envoy.bootstrap.internal_listener",
              "category": "envoy.bootstrap",
              "typeUrls": [
                "envoy.extensions.bootstrap.internal_listener.v3.InternalListener"
              ]
            },
            {
              "name": "envoy.bootstrap.wasm",
              "category": "envoy.bootstrap",
              "typeUrls": [
                "envoy.extensions.wasm.v3.WasmService"
              ]
            },
            {
              "name": "envoy.extensions.network.socket_interface.default_socket_interface",
              "category": "envoy.bootstrap",
              "typeUrls": [
                "envoy.extensions.network.socket_interface.v3.DefaultSocketInterface"
              ]
            },
            {
              "name": "auto",
              "category": "envoy.thrift_proxy.protocols"
            },
            {
              "name": "binary",
              "category": "envoy.thrift_proxy.protocols"
            },
            {
              "name": "binary/non-strict",
              "category": "envoy.thrift_proxy.protocols"
            },
            {
              "name": "compact",
              "category": "envoy.thrift_proxy.protocols"
            },
            {
              "name": "twitter",
              "category": "envoy.thrift_proxy.protocols"
            },
            {
              "name": "envoy.ip",
              "category": "envoy.resolvers"
            },
            {
              "name": "envoy.http.header_validators.envoy_default",
              "category": "envoy.http.header_validators",
              "typeUrls": [
                "envoy.extensions.http.header_validators.envoy_default.v3.HeaderValidatorConfig"
              ]
            },
            {
              "name": "envoy.compression.brotli.decompressor",
              "category": "envoy.compression.decompressor",
              "typeUrls": [
                "envoy.extensions.compression.brotli.decompressor.v3.Brotli"
              ]
            },
            {
              "name": "envoy.compression.gzip.decompressor",
              "category": "envoy.compression.decompressor",
              "typeUrls": [
                "envoy.extensions.compression.gzip.decompressor.v3.Gzip"
              ]
            },
            {
              "name": "envoy.compression.zstd.decompressor",
              "category": "envoy.compression.decompressor",
              "typeUrls": [
                "envoy.extensions.compression.zstd.decompressor.v3.Zstd"
              ]
            },
            {
              "name": "envoy.quic.proof_source.filter_chain",
              "category": "envoy.quic.proof_source",
              "typeUrls": [
                "envoy.extensions.quic.proof_source.v3.ProofSourceConfig"
              ]
            },
            {
              "name": "dubbo",
              "category": "envoy.dubbo_proxy.protocols"
            },
            {
              "name": "envoy.filters.udp.dns_filter",
              "category": "envoy.filters.udp_listener",
              "typeUrls": [
                "envoy.extensions.filters.udp.dns_filter.v3.DnsFilterConfig"
              ]
            },
            {
              "name": "envoy.filters.udp_listener.udp_proxy",
              "category": "envoy.filters.udp_listener",
              "typeUrls": [
                "envoy.extensions.filters.udp.udp_proxy.v3.UdpProxyConfig"
              ]
            },
            {
              "name": "envoy.matching.matchers.consistent_hashing",
              "category": "envoy.matching.input_matchers",
              "typeUrls": [
                "envoy.extensions.matching.input_matchers.consistent_hashing.v3.ConsistentHashing"
              ]
            },
            {
              "name": "envoy.matching.matchers.ip",
              "category": "envoy.matching.input_matchers",
              "typeUrls": [
                "envoy.extensions.matching.input_matchers.ip.v3.Ip"
              ]
            },
            {
              "name": "envoy.http.original_ip_detection.custom_header",
              "category": "envoy.http.original_ip_detection",
              "typeUrls": [
                "envoy.extensions.http.original_ip_detection.custom_header.v3.CustomHeaderConfig"
              ]
            },
            {
              "name": "envoy.http.original_ip_detection.xff",
              "category": "envoy.http.original_ip_detection",
              "typeUrls": [
                "envoy.extensions.http.original_ip_detection.xff.v3.XffConfig"
              ]
            }
          ]
        },
        "staticResources": {
          "clusters": [
            {
              "name": "xds_cluster",
              "type": "STRICT_DNS",
              "connectTimeout": "10s",
              "loadAssignment": {
                "clusterName": "xds_cluster",
                "endpoints": [
                  {
                    "lbEndpoints": [
                      {
                        "endpoint": {
                          "address": {
                            "socketAddress": {
                              "address": "envoy-gateway",
                              "portValue": 18000
                            }
                          }
                        }
                      }
                    ]
                  }
                ]
              },
              "typedExtensionProtocolOptions": {
                "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
                  "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
                  "explicitHttpConfig": {
                    "http2ProtocolOptions": {}
                  }
                }
              },
              "transportSocket": {
                "name": "envoy.transport_sockets.tls",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
                  "commonTlsContext": {
                    "tlsParams": {
                      "tlsMaximumProtocolVersion": "TLSv1_3"
                    },
                    "tlsCertificateSdsSecretConfigs": [
                      {
                        "name": "xds_certificate",
                        "sdsConfig": {
                          "pathConfigSource": {
                            "path": "/sds/xds-certificate.json"
                          },
                          "resourceApiVersion": "V3"
                        }
                      }
                    ],
                    "validationContextSdsSecretConfig": {
                      "name": "xds_trusted_ca",
                      "sdsConfig": {
                        "pathConfigSource": {
                          "path": "/sds/xds-trusted-ca.json"
                        },
                        "resourceApiVersion": "V3"
                      }
                    }
                  }
                }
              }
            }
          ]
        },
        "dynamicResources": {
          "ldsConfig": {
            "ads": {}
          },
          "cdsConfig": {
            "ads": {}
          },
          "adsConfig": {
            "apiType": "DELTA_GRPC",
            "transportApiVersion": "V3",
            "grpcServices": [
              {
                "envoyGrpc": {
                  "clusterName": "xds_cluster"
                }
              }
            ],
            "setNodeOnFirstMessageOnly": true
          }
        },
        "layeredRuntime": {
          "layers": [
            {
              "name": "runtime-0",
              "rtdsLayer": {
                "name": "runtime-0",
                "rtdsConfig": {
                  "ads": {}
                }
              }
            }
          ]
        },
        "admin": {
          "accessLog": [
            {
              "name": "envoy.access_loggers.file",
              "typedConfig": {
                "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                "path": "/dev/null"
              }
            }
          ],
          "address": {
            "socketAddress": {
              "address": "127.0.0.1",
              "portValue": 19000
            }
          }
        }
      },
      "lastUpdated": "2023-04-29T11:30:40.099Z"
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.ClustersConfigDump",
      "versionInfo": "16",
      "staticClusters": [
        {
          "cluster": {
            "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
            "name": "xds_cluster",
            "type": "STRICT_DNS",
            "connectTimeout": "10s",
            "loadAssignment": {
              "clusterName": "xds_cluster",
              "endpoints": [
                {
                  "lbEndpoints": [
                    {
                      "endpoint": {
                        "address": {
                          "socketAddress": {
                            "address": "envoy-gateway",
                            "portValue": 18000
                          }
                        }
                      }
                    }
                  ]
                }
              ]
            },
            "typedExtensionProtocolOptions": {
              "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
                "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
                "explicitHttpConfig": {
                  "http2ProtocolOptions": {}
                }
              }
            },
            "transportSocket": {
              "name": "envoy.transport_sockets.tls",
              "typedConfig": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
                "commonTlsContext": {
                  "tlsParams": {
                    "tlsMaximumProtocolVersion": "TLSv1_3"
                  },
                  "tlsCertificateSdsSecretConfigs": [
                    {
                      "name": "xds_certificate",
                      "sdsConfig": {
                        "pathConfigSource": {
                          "path": "/sds/xds-certificate.json"
                        },
                        "resourceApiVersion": "V3"
                      }
                    }
                  ],
                  "validationContextSdsSecretConfig": {
                    "name": "xds_trusted_ca",
                    "sdsConfig": {
                      "pathConfigSource": {
                        "path": "/sds/xds-trusted-ca.json"
                      },
                      "resourceApiVersion": "V3"
                    }
                  }
                }
              }
            }
          },
          "lastUpdated": "2023-04-29T11:30:40.105Z"
        }
      ],
      "dynamicActiveClusters": [
        {
          "versionInfo": "561d5132cf9ad41d87acc38d0ce04fddfc58b2a417b97e4f13432bc9fe680783",
          "cluster": {
            "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
            "name": "test-podinfo-route-rule-0-match-0-test.example.com",
            "type": "EDS",
            "edsClusterConfig": {
              "edsConfig": {
                "ads": {},
                "resourceApiVersion": "V3"
              }
            },
            "connectTimeout": "10s",
            "dnsLookupFamily": "V4_ONLY",
            "outlierDetection": {},
            "commonLbConfig": {
              "localityWeightedLbConfig": {}
            }
          },
          "lastUpdated": "2023-04-29T12:25:58.872Z"
        },
        {
          "versionInfo": "b303556524983c40bb2fdb9b7fcfe612609c33eb5d0d7c7ff7db517187b75942",
          "cluster": {
            "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
            "name": "test-podinfo-rule-0-match-0-test.example.com",
            "type": "EDS",
            "edsClusterConfig": {
              "edsConfig": {
                "ads": {},
                "resourceApiVersion": "V3"
              }
            },
            "connectTimeout": "10s",
            "dnsLookupFamily": "V4_ONLY",
            "outlierDetection": {},
            "commonLbConfig": {
              "localityWeightedLbConfig": {}
            }
          },
          "lastUpdated": "2023-04-29T11:57:02.392Z"
        }
      ]
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.EndpointsConfigDump",
      "staticEndpointConfigs": [
        {
          "endpointConfig": {
            "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
            "clusterName": "xds_cluster",
            "endpoints": [
              {
                "locality": {},
                "lbEndpoints": [
                  {
                    "endpoint": {
                      "address": {
                        "socketAddress": {
                          "address": "10.96.149.129",
                          "portValue": 18000
                        }
                      },
                      "healthCheckConfig": {},
                      "hostname": "envoy-gateway"
                    },
                    "healthStatus": "HEALTHY",
                    "metadata": {},
                    "loadBalancingWeight": 1
                  }
                ]
              }
            ],
            "policy": {
              "overprovisioningFactor": 140
            }
          }
        }
      ],
      "dynamicEndpointConfigs": [
        {
          "endpointConfig": {
            "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
            "clusterName": "test-podinfo-rule-0-match-0-test.example.com",
            "policy": {
              "overprovisioningFactor": 140
            }
          }
        },
        {
          "endpointConfig": {
            "@type": "type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment",
            "clusterName": "test-podinfo-route-rule-0-match-0-test.example.com",
            "endpoints": [
              {
                "locality": {},
                "lbEndpoints": [
                  {
                    "endpoint": {
                      "address": {
                        "socketAddress": {
                          "address": "10.96.226.50",
                          "portValue": 9898
                        }
                      },
                      "healthCheckConfig": {}
                    },
                    "healthStatus": "HEALTHY",
                    "loadBalancingWeight": 1
                  }
                ],
                "loadBalancingWeight": 1
              }
            ],
            "policy": {
              "overprovisioningFactor": 140
            }
          }
        }
      ]
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.ListenersConfigDump",
      "versionInfo": "2",
      "dynamicListeners": [
        {
          "name": "test-podinfo-gw-http",
          "activeState": {
            "versionInfo": "a693b4eaa00b5a1379a86fb2eb9754a9c12f94e7bdc8b4429073bd8587d3b2b3",
            "listener": {
              "@type": "type.googleapis.com/envoy.config.listener.v3.Listener",
              "name": "test-podinfo-gw-http",
              "address": {
                "socketAddress": {
                  "address": "0.0.0.0",
                  "portValue": 10080
                }
              },
              "defaultFilterChain": {
                "filters": [
                  {
                    "name": "envoy.filters.network.http_connection_manager",
                    "typedConfig": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                      "statPrefix": "http",
                      "rds": {
                        "configSource": {
                          "ads": {},
                          "resourceApiVersion": "V3"
                        },
                        "routeConfigName": "test-podinfo-gw-http"
                      },
                      "httpFilters": [
                        {
                          "name": "envoy.filters.http.router",
                          "typedConfig": {
                            "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                          }
                        }
                      ],
                      "accessLog": [
                        {
                          "name": "envoy.access_loggers.file",
                          "typedConfig": {
                            "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                            "path": "/dev/stdout"
                          }
                        }
                      ],
                      "useRemoteAddress": true,
                      "upgradeConfigs": [
                        {
                          "upgradeType": "websocket"
                        }
                      ]
                    }
                  }
                ]
              },
              "accessLog": [
                {
                  "name": "envoy.access_loggers.file",
                  "filter": {
                    "responseFlagFilter": {
                      "flags": [
                        "NR"
                      ]
                    }
                  },
                  "typedConfig": {
                    "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                    "path": "/dev/stdout"
                  }
                }
              ]
            },
            "lastUpdated": "2023-04-29T11:30:55.159Z"
          }
        }
      ]
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.ScopedRoutesConfigDump"
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.RoutesConfigDump",
      "dynamicRouteConfigs": [
        {
          "versionInfo": "be80961199fee60e560402ec9505892e269538cbf58a20268f89a95bdb5919cc",
          "routeConfig": {
            "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
            "name": "test-podinfo-gw-http",
            "virtualHosts": [
              {
                "name": "test-podinfo-gw-http",
                "domains": [
                  "*"
                ],
                "routes": [
                  {
                    "name": "test-podinfo-rule-0-match-0-test.example.com",
                    "match": {
                      "prefix": "/",
                      "headers": [
                        {
                          "name": ":authority",
                          "stringMatch": {
                            "exact": "test.example.com"
                          }
                        }
                      ]
                    },
                    "route": {
                      "cluster": "test-podinfo-rule-0-match-0-test.example.com"
                    }
                  },
                  {
                    "name": "test-podinfo-route-rule-0-match-0-test.example.com",
                    "match": {
                      "prefix": "/",
                      "headers": [
                        {
                          "name": ":authority",
                          "stringMatch": {
                            "exact": "test.example.com"
                          }
                        }
                      ]
                    },
                    "route": {
                      "cluster": "test-podinfo-route-rule-0-match-0-test.example.com"
                    }
                  }
                ]
              }
            ]
          },
          "lastUpdated": "2023-04-29T12:25:58.875Z"
        }
      ]
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.SecretsConfigDump",
      "dynamicActiveSecrets": [
        {
          "name": "xds_certificate",
          "lastUpdated": "2023-04-29T11:30:40.123Z",
          "secret": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret",
            "name": "xds_certificate",
            "tlsCertificate": {
              "certificateChain": {
                "inlineBytes": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLekNDQWhPZ0F3SUJBZ0lFT3Z0UmdUQU5CZ2txaGtpRzl3MEJBUXNGQURBc01SWXdGQVlEVlFRREV3MWwKYm5admVTMW5ZWFJsZDJGNU1SSXdFQVlEVlFRRkV3azNOamd5TXpNNU1qa3dIaGNOTWpNd05ESTRNVEV4TVRVMgpXaGNOTWpRd05ESTRNVEV4TVRVMldqQU1NUW93Q0FZRFZRUUREQUVxTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBeGZCeDkwMzJXUGs1THlqdUtIYmFGRHdsWmRpZ2RzeDFISys5THlwVGNZVmYKU0FSaW9EQkZvZ21maE9MU0Rrd2VKaW4yTFdpYXdMQjFNd0lMcWQxbHVCYTJQc3FKVXY0endtZzBwYlFpNlFm [...]
              },
              "privateKey": {
                "inlineBytes": "W3JlZGFjdGVkXQ=="
              }
            }
          }
        },
        {
          "name": "xds_trusted_ca",
          "lastUpdated": "2023-04-29T11:30:40.123Z",
          "secret": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret",
            "name": "xds_trusted_ca",
            "validationContext": {
              "trustedCa": {
                "inlineBytes": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHRENDQWdDZ0F3SUJBZ0lFTGNwUnlUQU5CZ2txaGtpRzl3MEJBUXNGQURBc01SWXdGQVlEVlFRREV3MWwKYm5admVTMW5ZWFJsZDJGNU1SSXdFQVlEVlFRRkV3azNOamd5TXpNNU1qa3dIaGNOTWpNd05ESTRNVEV4TVRVMgpXaGNOTWpRd05ESTRNVEV4TVRVMldqQXNNUll3RkFZRFZRUURFdzFsYm5admVTMW5ZWFJsZDJGNU1SSXdFQVlEClZRUUZFd2szTmpneU16TTVNamt3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ3kKcjJBOE0rTm9kZkJlZjcwRTZCanRGc00vK3UxREZPQ0V1YnZUYzcxYy9JcXltSmVQN3pNa0dEQ3BQTzBMTW1h [...]
              },
              "matchTypedSubjectAltNames": [
                {
                  "sanType": "DNS",
                  "matcher": {
                    "exact": "envoy-gateway"
                  }
                }
              ]
            }
          }
        }
      ]
    }
  ]
}
